# MarkWord

./: .gitignore  CHANGELOG.md  LICENSE  PROJECT_SUMMARY.md  README.md  main.py  pyproject.toml  requirements.txt  start.sh
docs/: CROSS_PLATFORM_GUIDE.md  DEVELOPER.md  USER_GUIDE.md
examples/: sample.md
scripts/: create_mac_app.py  start.bat  start.sh
src/: __init__.py  launcher.py  md_to_word_converter.py
tests/: test_converter.py
